<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Metas.MetasFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/Objetivos_por_dia"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:gravity="center|left"
            android:text="Objetivos por dia"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pasos_metas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pasos_text"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/pasos_metas_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="4"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/Calorias_metas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Calorias_text"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/calorias_meta_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:inputType="numberSigned" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:background="@android:color/transparent" />


        <TextView
            android:id="@+id/Datos_Personales"
            android:layout_width="match_parent"
            android:layout_height="76dp"
            android:gravity="center|left"
            android:text="Datos Personales"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Sexo_metas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="25dp"
                android:gravity="center|right"
                android:text="@string/Sexo_text" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <RadioButton
                    android:id="@+id/radioButtonMasculino"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="Masculino" />

                <RadioButton
                    android:id="@+id/radioButtonFemenino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Femenino" />
            </RadioGroup>

            <TextView
                android:id="@+id/Edad_metas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|right"
                android:textSize="26dp"
                android:text="@string/edad_text" />

            <EditText
                android:id="@+id/input_edad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:inputType="numberDecimal" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Peso_metas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/peso_text"
                android:textSize="26dp" />

            <EditText
                android:id="@+id/input_peso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/Altura_metas_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|right"
                android:text="@string/Altura_text"
                android:textSize="26dp" />

            <EditText
                android:id="@+id/input_altura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="3"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/cm_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|left"
                android:text="m"
                android:textSize="20dp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/boton_aplicar_metas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="aplicarCambios"
            android:textSize="25dp"
            android:text="@string/boton_aplicacion_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>